Trying to make the blog post sizes, running into several spacing issues with keeping the post centered

--- a/css/homeDecor.css
+++ b/css/homeDecor.css
@@ -1,1 +1,32 @@
 /*This page is not yet linked*/
+.main-pic-homedec{
+  width: 100%;
+  height: 500px;
+  background-position: center;
+  background-image: url("https://images.unsplash.com/photo-1422479278902-8cef24992df0?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.blog-posts-area{
+  height: 3000px;
+  width: 80%;
+  background: rgb(242, 242, 242);
+  margin: auto;
+}
+
+.blog-posts-area h1{
+  text-align: center;
+  font-size: 60px;
+  font-family: 'Kaushan Script', cursive;
+  margin-top: 40px;
+  margin-bottom: 60px;
+}
+
+.homeDec-post{
+  height: 300px;
+  background: green;
+  margin: 1%;
+  width: 48%;
+  min-width: 299px;
+}
